# phoneme_from_word

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/download_dict/: mod.rs
src/lyric_process/: mod.rs
src/phoneme_lib/: mod.rs
src/tools/: mod.rs
