[package]
name = "make_dic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lrc = "0.1"

[lib]
name = "phoneme_lib"
path = "src/lib.rs"

[[bin]]
name = "make_dic"
path = "src/bin/make_dic.rs"

[dev-dependencies]
tempdir = "0.3"